feat(jans-keycloak-integration): sync tr config between config-api and kc #8008 * refactor trustrelationship sync job (delete non-existing trust relationships) * added code to sync new trust relationships
Signed-off-by: Rolain Djeumen <uprightech@gmail.com>